--- a/tic-tac-toe/public/manifest.json
+++ b/tic-tac-toe/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tic Tac Toe",
+  "name": "Create simple Tic Tac Toe game",
   "icons": [
     {
       "src": "favicon.ico",
